[package]
name = "base_window"
version = "0.1.0"
edition = "2021"

[features]
default = ["opengl"]
opengl = ["baseview/opengl"]

[features]
default = ["opengl"]
opengl = ["baseview/opengl"]

[dependencies]
rtrb = "0.3"
baseview = { git = "https://github.com/RustAudio/baseview.git", rev = "1d9806d5bd92275d0d8142d9c9c90198757b9b25"}
raw-window-handle = "0.4.2"
glow = "0.13.1"
